--- a/model1/main.ipynb
+++ b/model1/main.ipynb
@@ -26,7 +26,7 @@
       "metadata": {
         "id": "rS2goHVqtPqj"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -38,7 +38,7 @@
       "metadata": {
         "id": "udIKHZ9MtQlA"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -52,7 +52,7 @@
       "metadata": {
         "id": "Z2MsXedYtSfh"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -84,7 +84,7 @@
         "id": "mB049ANrtTTh",
         "outputId": "0c91d1d5-cca5-40c3-98bd-064b6641b9a8"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -120,7 +120,7 @@
       "metadata": {
         "id": "0_ZPrX8ltXwh"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "id": "LOYJkUK1tZfY",
         "outputId": "ce02ff36-eccf-406b-e0f5-1d13046420bb"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -164,7 +164,7 @@
         "id": "_KkMSrF6ta4Z",
         "outputId": "fc883aa0-5cf3-4f33-e9d7-5f8ce77a690f"
       },
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +232,68 @@
       "metadata": {
         "id": "l-jFKKdhtcCR"
       },
-      "execution_count": 51,
+      "execution_count": 52,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.metrics import classification_report\n",
+        "\n",
+        "# Test veri kümesi üzerinde tahminler yapma\n",
+        "Y_pred = model.predict(validation_generator, validation_generator.samples // batch_size + 1)\n",
+        "\n",
+        "# En yüksek olasılığa sahip sınıfı seçme\n",
+        "y_pred = np.argmax(Y_pred, axis=1)\n",
+        "\n",
+        "# Gerçek etiketleri al\n",
+        "y_true = validation_generator.classes\n",
+        "\n",
+        "# Sınıf isimlerini al\n",
+        "class_names = list(validation_generator.class_indices.keys())\n",
+        "\n",
+        "# Sınıflandırma raporunu yazdırma\n",
+        "print(classification_report(y_true, y_pred, target_names=class_names))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "M13Gn7Z24Kn0",
+        "outputId": "4b1b5488-bd19-4636-9984-17bd98bd3389"
+      },
+      "execution_count": 53,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "225/225 [==============================] - 47s 208ms/step\n",
+            "              precision    recall  f1-score   support\n",
+            "\n",
+            "       angry       0.13      0.12      0.12       958\n",
+            "     disgust       0.00      0.00      0.00       111\n",
+            "        fear       0.13      0.06      0.08      1024\n",
+            "       happy       0.24      0.24      0.24      1774\n",
+            "     neutral       0.16      0.26      0.20      1233\n",
+            "         sad       0.17      0.14      0.16      1247\n",
+            "    surprise       0.10      0.12      0.11       831\n",
+            "\n",
+            "    accuracy                           0.17      7178\n",
+            "   macro avg       0.13      0.13      0.13      7178\n",
+            "weighted avg       0.16      0.17      0.16      7178\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "Y8Y8LUhX4LTC"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
